# youtubemaster

./: .gitignore  README.md  YouTubeMaster.spec  build.py  compile.bat  convert_icons.py  file_version_info.txt  hook_youtubemaster.py  installer.nsi  pyproject.toml  run_app.py  test.py
.cursor/rules/: documentation-rules.mdc  video-metadata-rules.mdc
Docs/: Youtube Master.md  yt-dlp Documentation.md  yt_cookies.txt
src/: config.yaml
src/youtubemaster/: __init__.py  main.py  main_window.py
src/youtubemaster/models/: BilibiliModel.py  CLIDownloadWorker.py  DownloadManager.py  PythonDownloadWorker.py  SiteModel.py  ThemeManager.py  YoutubeModel.py  Yt_DlpModel.py
src/youtubemaster/resources/: __init__.py
src/youtubemaster/services/: DownloadService.py
src/youtubemaster/ui/: DownloadQueue.py  FlowLayout.py  VideoInput.py  YoutubeProgress.py  __init__.py  main_window.py
src/youtubemaster/utils/: __init__.py  config.py  env_loader.py  logger.py  yt_dlp_wrapper.py
youtube-master-audio/: README.md  background.js  content.js  manifest.json
youtube-master-extension/: README.md  background.js  content.js  manifest.json  register_protocol.reg  setup.bat
